[project]
name = "ocrmypdf-easyocr"
version = "0.2.0"
description = "Plugin to run OCRmyPDF with the EasyOCR engine"
authors = [{ name = "James R. Barlow", email = "james@purplerock.ca" }]
dependencies = [
  "easyocr>=1.7.0",
  "ocrmypdf>=14.2.1",
  "Pillow>=10.0.1",
  "opencv-python-headless>=4.8.0.74",
  "numpy>=1.20",
  "torch",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[project.entry-points]

[project.entry-points.ocrmypdf]
ocrmypdf = "ocrmypdf_easyocr"

[project.optional-dependencies]
dev = ["ruff>=0.0.272"]
test = ["pytest>=6.2.5"]

[project.urls]
Homepage = "https://github.com/ocrmypdf/OCRmyPDF-EasyOCR"
Repository = "https://github.com/ocrmypdf/OCRmyPDF-EasyOCR.git"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
ocrmypdf_easyocr = ["pdf.ttf", "py.typed"]
