[project]
name = "ocrmypdf-easyocr"
version = "0.3.0"
description = "Plugin to run OCRmyPDF with the EasyOCR engine"
authors = [{ name = "James R. Barlow", email = "james@purplerock.ca" }]
dependencies = [
  "easyocr>=1.7.0",
  "ocrmypdf>=17.0",
  "Pillow>=10.0.1",
  "opencv-python-headless>=4.8.0.74",
  "numpy>=1.20",
  "torch",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[project.entry-points]

[project.entry-points.ocrmypdf]
ocrmypdf = "ocrmypdf_easyocr"

[dependency-groups]
dev = ["ruff>=0.0.272"]
test = ["pytest>=6.2.5"]

[project.urls]
Homepage = "https://github.com/ocrmypdf/OCRmyPDF-EasyOCR"
Repository = "https://github.com/ocrmypdf/OCRmyPDF-EasyOCR.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ocrmypdf_easyocr"]
